# raspberrypi-dotnet

./: .gitignore  .gitmodules  README.MD  build.sh
i2c-test/: BME280.cs  BMP280.cs  Program.cs  SGP30.cs  i2c-test.csproj
lib-i2c/: I2CBus.cs  NativeMethods.cs  lib-i2c.csproj
lib-i2c.native/: CMakeLists.txt  Toolchain-RaspberryPi.cmake
lib-i2c.native/src/: CMakeLists.txt  lib_i2c_native.c
